# BulkRNAseq_analysisTools

./: LICENSE  README.md  getGeneSets.ipynb  pyproject.toml
JupyterNotebooks/: GSEA.ipynb  getGeneSets.ipynb
geneSetFiles/: pae_descriptions.pkl  pae_kegg_pathways.gmt
